<resources>
    <string name="app_name">vetail layout</string>
    <string name="loginIntro">Login to my account</string>
    <string name="signupIntro">I\'m new here, sign me up</string>
    <string name="term_policy">By loggin in or signing up, you are agree to Veatail\'s <font color='#487FFF'>Terms of Use</font> and <font color='#487FFF'>Privacy Policy.</font></string>
    <string name="login_to_my_account">Login to my account</string>
    <string name="login_phone_email">Mobile number or email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_login_with">or login with</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome_first_caption">Buy and sell \nAll in one application</string>
    <string name="welcome_first_little_caption">Ever thought about you not being able to find a right online place to establihs a shop? \nWe have ShopDoora for you</string>
    <string name="welcome_second_caption">Attract the customers\nAll in one application</string>
    <string name="welcome_second_little_caption">Come come here mister. Be the first to join the future of buyer and seller relationship.</string>
    <string name="welcome_third_caption">What are you waiting for</string>
    <string name="welcome_thirdt_little_caption">We couldn\'t persuade you any better. Let\'s just join now</string>
    <string name="signin_term_and_policy">By signing up, you\'ve read and agreeded to \nVetails\' <font color='#487FFF'>Terms of Services </font> and <font color='#487FFF'>Privacy policy </font>\non how we collect, use and process your \npersonal data</string>
    <string name="acc_exist_normal">ယခုဖုန်းနံပါတ်ဖြင့် အကောင့်ဖွင့်ထားပြီးသားဖြစ်ပါသည်။</string>
    <string name="acc_exist_shopdoora">ယခုဖုန်းနံပါတ်ဖြင့် ShopDoora Seller အကောင့်ဖွင့်ထားပြီးသားဖြစ်ပါသည်</string>
    <string name="proceed">ဆက်သွားမည်</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <string name="personal_info">ကိုယ်ရေးအချက်အလက်များ</string>
    <string name="phone_num">ဖုန်းနံပါတ်</string>

    <string name="connect">ချိတ်ဆက်မည်</string>
    <string name="forgot_pwd">စကားဝှက် မေ့နေပါသလား?</string>
    <string name="its_ok_to_forgot">စိတ်မပူပါနဲ့၊ ဒါဟာဖြစ်တတ်ပါတယ်!</string>
    <string name="fill_phone_email">သင့်အကောင့်ဖွင့်စဥ်က အသုံးပြုထားသော ဖုန်းနံပါတ် (သို့)\n
    အီးမေးလ်ကို အောက်တွင်ဖြည့်စွက်ပါ။</string>
    <string name="checkPhoneNum">ယခုဖုန်းနံပါတ်ဖြင့် ချိတ်ဆက်ထားသောအကောင့်မရှိပါ! ဖုန်းနံပါတ် မှန်မမှန် ပြန်လည်စစ်ဆေးပါ။</string>

    <string-array name="cities">
        <item>ရန်ကုန် (Yangon)</item>
        <item>မန္တလေး (Mandalay)</item>
        <item>နေပြည်တော် (Nay Pyi Taw)</item>
    </string-array>

    <string-array name="towns">
        <item>ကမာရွတ် Kamaryut</item>
        <item>ကြည့်မြင်တိုင် Kyimyindaing</item>
        <item>အလုံ Ahlone</item>
    </string-array>

    <string name="connect_acc">ချိတ်ဆက်မည်</string>
    <string name="profile">မိမိပရိုဖိုင်</string>
    <string name="profile_name">Jobby James</string>
    <string name="profile_bio">ကိုယ်ရေး အချက်အလက်များ</string>
    <string name="setting">ဆက်တင်များ</string>
    <string name="acc_connect">အကောင့်ချိတ်ဆက်ခြင်း</string>
    <string name="change_language">ဘာသာစကား ပြောင်းလဲမည်</string>
    <string name="sec_setting">လုံခြုံရေးဆိုင်ရာ ဆက်တင်များ</string>
    <string name="phone">ဖုန်းနံပါတ်</string>
    <string name="_09435984884">09435984884</string>
    <string name="email">အီးမေးလ်</string>
    <string name="bd">မွေးနေ့</string>
    <string name="bd_date">13 Aug 1990</string>
    <string name="address">လိပ်စာ</string>
    <string name="location">N0. 84, Padamyar St. Hledan</string>
    <string name="google">Google</string>
    <string name="log_out">အကောင့်ထွက်မည်</string>
    <string name="confirm_waiting_card">ကြာမြင့်ချိန်အနည်းဆုံး <b>၅ ရက်</b> မှ <b>၁၀ ရက်</b> အတွင်း</string>
    <string name="signUp">အကောင့်ဝင်မည်</string>
</resources>