<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LogInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/ivBackButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back_24"
            android:background="@color/white"
            />
    </androidx.appcompat.widget.Toolbar>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvBackGroundLogin"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintTop_toBottomOf="@id/tbLogin"
        android:layout_marginTop="18dp"
        app:cardCornerRadius="25dp">
    <ImageView
        android:id="@+id/ivBackgroundLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/tbLogin"
        android:src="@drawable/bg_login"
        android:scaleType="fitCenter"/>
    </androidx.cardview.widget.CardView>
    <View
        android:id="@+id/viewBg"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/cvBackGroundLogin"
        android:layout_marginBottom="35dp"
        />

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/viewBg"
    app:layout_constraintBottom_toBottomOf="parent"
    android:background="@drawable/custom_login"
    android:elevation="2dp"
    >
    <TextView
        android:id="@+id/tvTobLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_my_account"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_ph_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:startIconTint="@color/black"
        app:startIconDrawable="@drawable/ic_phone_outline_icon"
        android:layout_marginHorizontal="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/tvTobLabel"
        app:boxStrokeColor="@color/blueOne"
        app:hintTextColor="@color/blueOne"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:hintEnabled="false"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_ph_no"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/login_phone_email"
            android:textColorHint="@color/iconTextColor"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvEmailError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_ph_no"
        app:layout_constraintLeft_toLeftOf="@id/til_pw"
        app:layout_constraintRight_toRightOf="@id/til_pw"
        android:text="အကောင့်မရှိပါ၊ ကျေးဇူးပြု၍ အကောင့်ဖွင့်ပါ"
        android:textColor="@color/red"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:textSize="14sp"
        android:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:startIconTint="@color/black"
        app:startIconDrawable="@drawable/ic_lock_24"
        android:layout_marginHorizontal="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/tvEmailError"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxStrokeColor="@color/blueOne"
        app:hintTextColor="@color/blueOne"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textColorHint="@color/iconTextColor"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPwError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_pw"
        app:layout_constraintLeft_toLeftOf="@id/til_pw"
        app:layout_constraintRight_toRightOf="@id/til_pw"
        android:text="စကားဝှက်မှားနေပါသည်"
        android:textColor="@color/red"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:textSize="14sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvForgotPw"
        android:clickable="true"
        android:elevation="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/tvPwError"
        app:layout_constraintRight_toRightOf="@+id/til_pw"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:cursorVisible="true"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPw"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="@id/til_pw"
        app:layout_constraintRight_toRightOf="@id/til_pw"
        android:background="@drawable/custom_button_invisibile_blue"
        />

    <TextView
        android:id="@+id/tvOrLoginWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        android:text="@string/or_login_with"
        android:layout_marginTop="25dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:gravity="center"/>
    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintTop_toTopOf="@+id/tvOrLoginWith"
        app:layout_constraintBottom_toBottomOf="@+id/tvOrLoginWith"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvOrLoginWith"
        android:background="@color/whitishWhite"
        android:layout_marginHorizontal="10dp"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintTop_toTopOf="@+id/tvOrLoginWith"
        app:layout_constraintBottom_toBottomOf="@+id/tvOrLoginWith"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tvOrLoginWith"
        android:background="@color/whitishWhite"
        android:layout_marginHorizontal="10dp"
        />

    <LinearLayout
        android:id="@+id/llOtherLgoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvOrLoginWith"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:id="@+id/ivApple"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_apple_login"
            android:layout_marginHorizontal="12dp"/>
        <ImageView
            android:id="@+id/ivFacebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_facebook"
            android:layout_marginHorizontal="12dp"/>
        <ImageView
            android:id="@+id/ivGoogle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_google"
            android:layout_marginHorizontal="12dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>