<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LogOrSignActivity"
    android:theme="@style/Theme.TopBlue"
    android:background="@color/blueOne">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpWelcome"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:elevation="3dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivVector"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_vector"/>
    <ImageView
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_vetail_white"
        app:layout_constraintBottom_toBottomOf="@+id/tabLayout"
        app:layout_constraintTop_toTopOf="@+id/tabLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="35dp"/>
    <LinearLayout
        android:id="@+id/indicator_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/vpWelcome"
        app:layout_constraintLeft_toLeftOf="@id/vpWelcome"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="45dp"
        >

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="30dp"
        android:layout_width="95dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        app:tabMode="fixed"
        app:tabGravity="center"
        android:textAlignment="center"
        app:tabIndicatorGravity="stretch"
        android:background="@drawable/custom_switch_bg"
        app:tabSelectedTextColor="#005FFF"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicator="@drawable/tab_indicator"
        app:tabTextColor="#84A6FF"
        android:elevation="3dp"
        app:tabTextAppearance="@style/CustomTabText"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBottomLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/vpWelcome"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/custom_login"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/custom_button_blue"
            android:text="@string/loginIntro"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/custom_button_white"
            android:text="@string/signupIntro"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            />

        <TextView
            android:id="@+id/tvTermAndPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="40dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/term_policy"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>