<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignUpOneFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvTobLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="အကောင့်အသစ်ဖွင့်မည်"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/til_ph_no"
            android:layout_marginTop="35dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_ph_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:startIconTint="@color/black"
            app:startIconDrawable="@drawable/ic_phone_outline_icon"
            android:layout_marginHorizontal="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/tvTobLabel"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxStrokeColor="@color/blueOne"
            app:hintTextColor="@color/blueOne"
            app:hintEnabled="false"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_ph_no"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/login_phone_email"
                android:textColorHint="@color/iconTextColor"
                android:inputType="text"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ivCorrect"
            android:layout_width="22dp"
            android:layout_height="22dp"
            app:layout_constraintRight_toRightOf="@+id/til_ph_no"
            app:layout_constraintTop_toTopOf="@id/til_ph_no"
            app:layout_constraintBottom_toBottomOf="@id/til_ph_no"
            android:layout_marginRight="15dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_correct_24"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/tvAccDuplicate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/til_ph_no"
            app:layout_constraintLeft_toLeftOf="@id/til_ph_no"
            app:layout_constraintRight_toRightOf="@id/til_ph_no"
            android:layout_marginTop="15dp"
            android:text="@string/acc_exist_shopdoora"
            android:textSize="14sp"
            android:textColor="@color/red"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/tvTermAndPolicy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvAccDuplicate"
            app:layout_constraintLeft_toLeftOf="@id/til_ph_no"
            app:layout_constraintRight_toRightOf="@id/til_ph_no"
            android:layout_marginTop="15dp"
            android:text="@string/signin_term_and_policy"
            android:textSize="16sp"
            android:textColor="@color/black"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTermAndPolicy"
            app:layout_constraintLeft_toLeftOf="@id/til_ph_no"
            app:layout_constraintRight_toRightOf="@id/til_ph_no"
            android:layout_marginTop="35dp"
            android:text="ဆက်သွားမည်"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/custom_button_invisibile_blue"
            android:stateListAnimator="@null"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>