<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back_24"
            android:background="@color/white"
            />
    </androidx.appcompat.widget.Toolbar>
        <ImageView
            android:id="@+id/ivBackgroundSignUp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@id/tbLogin"
            android:background="@drawable/bg_signup"
            android:scaleType="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ivBackgroundSignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/custom_login"
        android:elevation="2dp"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvTobLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="အကောင့်အသစ်ဖွင့်မည်"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_ph_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:startIconTint="@color/black"
            app:startIconDrawable="@drawable/ic_phone_outline_icon"
            android:layout_marginHorizontal="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/tvTobLabel"
            app:boxStrokeColor="@color/blueOne"
            app:hintTextColor="@color/blueOne"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_ph_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_phone_email"
                android:textColorHint="@color/iconTextColor"
                android:maxLength="11"
                android:inputType="phone"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            app:layout_constraintRight_toRightOf="@+id/til_ph_no"
            app:layout_constraintTop_toTopOf="@id/til_ph_no"
            app:layout_constraintBottom_toBottomOf="@id/til_ph_no"
            android:layout_marginRight="15dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_correct_24"
            />

        <TextView
            android:id="@+id/tvAccDuplicate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/til_ph_no"
            app:layout_constraintLeft_toLeftOf="@id/til_ph_no"
            app:layout_constraintRight_toRightOf="@id/til_ph_no"
            android:layout_marginTop="15dp"
            android:text="@string/acc_exist_shopdoora"
            android:textSize="14sp"
            android:textColor="@color/red"
            android:visibility="visible"
            />

        <TextView
            android:id="@+id/tvTermAndPolicy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvAccDuplicate"
            app:layout_constraintLeft_toLeftOf="@id/til_ph_no"
            app:layout_constraintRight_toRightOf="@id/til_ph_no"
            android:layout_marginTop="15dp"
            android:text="@string/signin_term_and_policy"
            android:textSize="16sp"
            android:textColor="@color/black"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTermAndPolicy"
            android:layout_marginTop="35dp"
            android:text="အကောင့်ဝင်မည်"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/custom_button_blue"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>